<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/round_shape"
    android:backgroundTint="@color/white"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_today_blue_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inauguration_ceremony"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/venue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/time_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_00am_11_30am"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            android:src="@drawable/line" />
    </LinearLayout>

</LinearLayout>